# datastruct-rs

./: .gitignore  Cargo.toml  DOCUMENT.md  README.md
datastruct/: Cargo.toml
datastruct/src/: lib.rs  traits.rs
datastruct_derive/: Cargo.toml
datastruct_derive/src/: cmp.rs  generate.rs  lib.rs  ops.rs  syntax.rs
datastruct_derive/src/config/: field_config.rs  mod.rs  struct_config.rs
datastruct_derive/src/utils/: collect_meta.rs  mod.rs  synerr.rs
libtest/: Cargo.toml
libtest/src/: lib.rs  test_ops.rs
