[package]
name = "datastruct_derive"
edition = "2021"
version = "0.1.1"
description = "The derive macro of `datastruct` crate."
license = "MIT OR Apache-2.0"
keywords = ["proc-macro", "data", "structure", "derive"]
categories = ["data-structures"]
publish = true
repository = "https://github.com/embers-of-the-fire/datastruct-rs.git"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full", "printing"] }
itertools = "0.12.1"

